Added a new module which reads in the OBI ontology and outputs the appropriate OntologyCollection. The intent is to help developers creating SyMBA templates by allowing automated creation of suitable OBI term groups. Documentation will follow. I've added some jars which aren't in any public maven repos to the CARMEN / SyMBA maven repository, so please let me know if you have any problems running mvn install. Finally, I've decided not to include a copy of OBI.owl in the SyMBA subversion repo, as I thought it best to allow people to download an up-to-date version. You can always download OBI from http://purl.obofoundry.org/obo/obi.owl . Enjoycd ..

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,14 @@
             <!--<id>shell.sf.net</id>-->
             <!--<url>scp://shell.sf.net/home/groups/s/sy/symba/htdocs/</url>-->
         <!--</site>-->
+
+        <!--
+        The repository and snapshotRepository can be used to upload jars that are used within SyMBA, but which are
+        currently unavailable within public maven repositories. You can upload jars individually via a deploy-file
+        command such as:
+        mvn deploy:deploy-file -DgroupId=owlapi -DartifactId=api -Dversion=2.2.0 -Dpackaging=jar -DrepositoryId=carmen \
+        -Durl=scp://carmen.ncl.ac.uk/var/www/maven/repo/ -Dfile=/path/to/file
+        -->
         <repository>
             <id>carmen</id>
             <name>Carmen release repository</name>
@@ -404,6 +412,7 @@
         <module>symba-jaxb2</module>
         <module>symba-lsid-ws-api</module>
         <module>symba-backend</module>
+        <module>symba-obiloader</module>
         <module>symba-lsid-ws-assigner</module>
         <module>symba-lsid-ws-resolver</module>
         <module>symba-lsid-ws-client</module>
