--- a/symba-backend/pom.xml
+++ b/symba-backend/pom.xml
@@ -46,6 +46,9 @@
             <url>http://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
+    <properties>
+        <java.util.logging.config.file>logging.properties</java.util.logging.config.file>
+    </properties>
     <!--<build>-->
     <!--<resources>-->
       <!--<resource>src/main/resources</resource>-->
