Added logging.properties reference within the  lsid-ws-client pom, and added some directions to the README.txt within that directory.

--- a/symba-lsid-ws-client/pom.xml
+++ b/symba-lsid-ws-client/pom.xml
@@ -12,6 +12,7 @@
     <name>SyMBA LSID webservices: Client Example Code</name>
     <properties>
         <cxf.version>2.1</cxf.version>
+        <java.util.logging.config.file>logging.properties</java.util.logging.config.file>
     </properties>
     <dependencies>
         <dependency>
