Modified a number of things so that the scp step works under windows. Please note that we have CHANGED the way the scp.directory  variable is used. Up until now, scp.directory was used with a '/data' directory appended to the end of the scp.directory variable within LoadFuGE. this is NO LONGER THE CASE. The **FULL** path of the directory you wish all data files to go to must be specified within the scp.directory variable. Added to the scp variables is scp.remote.data.store.os. This should only be 'unix' or 'dos'. Currently, all this does is allow the 'ln -sf' command if in unix mode, and not run this command if in dos mode. In order to commit, I also have committed other changes to LoadFuge that make the ontology collection creation cleaner.

--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
     <distributionManagement>
         <site>
             <id>local-test</id>
-            <url>scp://localhost/media/share/website-test/</url>
+            <url>scp://localhost/media/disk/website-test/</url>
         </site>
         <!--<site>-->
             <!--<id>shell.sf.net</id>-->
@@ -481,10 +481,13 @@
         <security.url>jdbc:postgresql://your.machine:5432/symba_security</security.url>
         <security.username>user</security.username>
         <security.password>pass</security.password>
-        <scp.directory>/your/directory</scp.directory>
+        <!-- The full path to the actual directory where the files should reside -->
+        <scp.directory>/your/directory/data/</scp.directory>
         <scp.hostname>localhost</scp.hostname>
         <scp.username>user</scp.username>
         <scp.password>pass</scp.password>
+        <!-- scp.remote.data.store.os MUST be either "unix" or "dos" -->
+        <scp.remote.data.store.os>dos</scp.remote.data.store.os>
     </properties>
     <profiles>
         <profile>
