--- a/symba-webapp/src/main/resources/symba.properties
+++ b/symba-webapp/src/main/resources/symba.properties
@@ -12,3 +12,4 @@ scp.directory=${scp.directory}
 scp.hostname=${scp.hostname}
 scp.username=${scp.username}
 scp.password=${scp.password}
+scp.remote.data.store.os=${scp.remote.data.store.os}
