--- a/symba-webapp/src/main/resources/symba.properties
+++ b/symba-webapp/src/main/resources/symba.properties
@@ -13,3 +13,4 @@ scp.hostname=${scp.hostname}
 scp.username=${scp.username}
 scp.password=${scp.password}
 scp.remote.data.store.os=${scp.remote.data.store.os}
+scp.lsid.colon.replacement=${scp.lsid.colon.replacement}
