--- a/symba-webapp/src/main/resources/symba.properties
+++ b/symba-webapp/src/main/resources/symba.properties
@@ -3,14 +3,16 @@
 # $Author$
 # $HeadURL$
 #
-helpEmail=${helpEmail}
-security.driver=${security.driver}
-security.url=${security.url}
-security.username=${security.username}
-security.password=${security.password}
-scp.directory=${scp.directory}
-scp.hostname=${scp.hostname}
-scp.username=${scp.username}
-scp.password=${scp.password}
-scp.remote.data.store.os=${scp.remote.data.store.os}
-scp.lsid.colon.replacement=${scp.lsid.colon.replacement}
+net.sourceforge.symba.webapp.helpEmail=${net.sourceforge.symba.webapp.helpEmail}
+
+net.sourceforge.symba.webapp.security.driver=${net.sourceforge.symba.webapp.security.driver}
+net.sourceforge.symba.webapp.security.url=${net.sourceforge.symba.webapp.security.url}
+net.sourceforge.symba.webapp.security.username=${net.sourceforge.symba.webapp.security.username}
+net.sourceforge.symba.webapp.security.password=${net.sourceforge.symba.webapp.security.password}
+
+net.sourceforge.symba.webapp.scp.directory=${net.sourceforge.symba.webapp.scp.directory}
+net.sourceforge.symba.webapp.scp.hostname=${net.sourceforge.symba.webapp.scp.hostname}
+net.sourceforge.symba.webapp.scp.username=${net.sourceforge.symba.webapp.scp.username}
+net.sourceforge.symba.webapp.scp.password=${net.sourceforge.symba.webapp.scp.password}
+net.sourceforge.symba.webapp.scp.remote.data.store.os=${net.sourceforge.symba.webapp.scp.remote.data.store.os}
+net.sourceforge.symba.webapp.scp.lsid.colon.replacement=${net.sourceforge.symba.webapp.scp.lsid.colon.replacement}
