--- a/symba-backend/src/main/resources/symba.properties
+++ b/symba-backend/src/main/resources/symba.properties
@@ -3,7 +3,7 @@
 # $Author: schoepf $
 # $HeadURL: https://symba.svn.sourceforge.net/svnroot/symba/trunk/symba-webapp/src/main/resources/symba.properties $
 #
-security.driver=${security.driver}
-security.url=${security.url}
-security.username=${security.username}
-security.password=${security.password}
+net.sourceforge.symba.webapp.security.driver=${net.sourceforge.symba.webapp.security.driver}
+net.sourceforge.symba.webapp.security.url=${net.sourceforge.symba.webapp.security.url}
+net.sourceforge.symba.webapp.security.username=${net.sourceforge.symba.webapp.security.username}
+net.sourceforge.symba.webapp.security.password=${net.sourceforge.symba.webapp.security.password}
