--- a/symba-querying/pom.xml
+++ b/symba-querying/pom.xml
@@ -17,9 +17,9 @@
             <version>${pom.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.sourceforge.fuge</groupId>
-            <artifactId>fuge-jaxb2</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>symba-jaxb2</artifactId>
+            <version>${pom.version}</version>
         </dependency>
         <dependency>
             <groupId>jdom</groupId>
