Put back in the fix for ASM / CGLIB problems between the versions of these jars in CXF and those in Hibernate. (were accidentally removed in the upgrade). Also fixed bug in setting the endurant lsid within verify.jsp.

--- a/symba-core/pom.xml
+++ b/symba-core/pom.xml
@@ -36,9 +36,30 @@
             <groupId>aopalliance</groupId>
             <artifactId>aopalliance</artifactId>
         </dependency>
+        <!-- See (http://www.lumidant.com/blog/hibernate-asm-incompatibilities/) for purpose of this fix, so that we
+        can be compatible with the cxf webservices -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.1</version>
+        </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>asm</groupId>
+                    <artifactId>asm</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>asm</groupId>
+                    <artifactId>asm-attrs</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>cglib</groupId>
+                    <artifactId>cglib</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
