Carmen experiment works properly now, as well as the mimage experiment. To use, remember to load the ontology terms before loading the full template!
Made some more associations in the UML to lazy loading = false.

Added a status message that you write into the top-level pom, and which will then get displayed in the login page.

The other two sample experiments load, but are not functioning quite right with the interface. I'll be working on those in the next few days.

the viewing of the experiments doesn't yet show all the inforamtion, but that is also in my immediate to-do list. Until i get it all showing, I've removed the ability to copy metadata from the view screen, but it will be put back. 

Once these are fixed, the sandbox will be rebuilt - hopefully next week.

--- a/pom.xml
+++ b/pom.xml
@@ -478,6 +478,13 @@
                 <!-- The help email address for your group -->
                 <net.sourceforge.symba.webapp.helpEmail>helpdesk@cisban.ac.uk</net.sourceforge.symba.webapp.helpEmail>
 
+                <!-- An optional status message to be displayed on the login screen only -->
+                <net.sourceforge.symba.webapp.status>
+                    If you wish to have your own login to the sandbox, please contact us. Otherwise, you may access \
+                    with the general login "MickeyM" with pass "MousePass". Please let us know if it seems anyone is \
+                    misusing this login and we can reset the database.
+                </net.sourceforge.symba.webapp.status>
+
                 <!-- The name and verison of this software: there are already reasonable defaults, so you don't need to
                 change this unless you want to -->
                 <net.sourceforge.symba.webapp.softwareName>SyMBA</net.sourceforge.symba.webapp.softwareName>
