--- a/symba-webapp/src/main/resources/symba.properties
+++ b/symba-webapp/src/main/resources/symba.properties
@@ -4,6 +4,7 @@
 # $HeadURL$
 #
 net.sourceforge.symba.webapp.helpEmail=${net.sourceforge.symba.webapp.helpEmail}
+net.sourceforge.symba.webapp.status=${net.sourceforge.symba.webapp.status}
 net.sourceforge.symba.webapp.softwareName=${net.sourceforge.symba.webapp.softwareName}
 net.sourceforge.symba.webapp.softwareVersion=${net.sourceforge.symba.webapp.softwareVersion}
 
