Many more small fixes for fuge version 1 symba. Loads of interesting functionality now! Some bugs still remaining to do next week:
*old values from already-created specimens are retained as the default choice when new ontology terms are added (eg organism) (minor)
* adding a new specimen doesn't add anything to the relevant experiment, perhaps if only coming from the assay portion, or perhaps because has same material name.  If starting with the specimen route and with another name, all OK.
* name of experiment in both confirmation pages is tiny compared with the rest of the text (minor)
*ageing status does not retain its "new term" item when pulled from existing specimen
* ontologyterms used in ParameterValues of EquipmentApplications don't get added to the OntologyCollection
* in confirm page, the data files after number 1 are indented rather than at the same level of indentation as the first data file (minor)

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>net.sourceforge.symba</groupId>
     <artifactId>symba</artifactId>
     <packaging>pom</packaging>
-    <version>8.08-alpha</version>
+    <version>8.09</version>
     <name>SyMBA</name>
     <url>http://symba.sourceforge.net</url>
     <description>The Systems and Molecular Biology data Archive (SyMBA) Project. The Centre for Integrated Systems
@@ -457,7 +457,7 @@
         <application.id>symba</application.id>
         <application.package>net.sourceforge.symba</application.package>
         <application.name>SyMBA: FuGE-Based Systems and Molecular Biology Data and Metadata Archive</application.name>
-        <application.version>8.08-alpha</application.version>
+        <application.version>8.09</application.version>
         <dataSource.name>jdbc/${application.id}</dataSource.name>
         <dataSource>java:comp/env/${dataSource.name}</dataSource>
     </properties>
@@ -480,8 +480,13 @@
 
                 <!-- An optional status message to be displayed on the login screen only -->
                 <net.sourceforge.symba.webapp.status>
+                    12 September 2008. We are nearly complete with the upgrade to FuGE Version 1. Please \
+                    be aware that some parts of the system may not be operating fully. Specifically, the ability to \
+                    copy metadata from a particular protocol run directly into a new loading of a protocol has \
+                    been temporarily disabled. However, we thought it best to  \
+                    allow you to play with the most up-to-date version of the software in the meantime. \
                     If you wish to have your own login to the sandbox, please contact us. Otherwise, you may access \
-                    with the general login "MickeyM" with pass "MousePass". Please let us know if it seems anyone is \
+                    with the general login "Anonymous" with pass "AnonymousPass". Please let us know if it seems anyone is \
                     misusing this login and we can reset the database.
                 </net.sourceforge.symba.webapp.status>
 
