--- a/symba-obiloader/pom.xml
+++ b/symba-obiloader/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>net.sourceforge.symba</groupId>
         <artifactId>symba</artifactId>
-        <version>8.08-alpha</version>
+        <version>8.09</version>
     </parent>
     <artifactId>symba-obiloader</artifactId>
     <packaging>jar</packaging>
