--- a/symba-webapp/pom.xml
+++ b/symba-webapp/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>net.sourceforge.symba</groupId>
         <artifactId>symba</artifactId>
-        <version>8.08-alpha</version>
+        <version>8.09</version>
     </parent>
     <artifactId>symba-webapp</artifactId>
     <packaging>war</packaging>
