Fixed old repository reference within this pom. See http://weblogs.java.net/blog/kohsuke/archive/2009/03/changes_to_the.html for details of why. Thanks very much to Mark Seifert for pointing out the bug.

--- a/symba-jaxb2/pom.xml
+++ b/symba-jaxb2/pom.xml
@@ -60,22 +60,22 @@
             <url>http://download.java.net/maven/2/</url>
             <layout>default</layout>
         </repository>
-        <repository>
-            <id>java.net</id>
-            <url>http://download.java.net/maven/1</url>
-            <layout>legacy</layout>
-        </repository>
+        <!--<repository>-->
+            <!--<id>java.net</id>-->
+            <!--<url>http://download.java.net/maven/1</url>-->
+            <!--<layout>legacy</layout>-->
+        <!--</repository>-->
     </repositories>
     <pluginRepositories>
         <pluginRepository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Maven 2 Repository</name>
-            <url>https://maven2-repository.dev.java.net/nonav/repository</url>
+            <url>http://download.java.net/maven/2</url>
         </pluginRepository>
-        <pluginRepository>
-            <id>java.net</id>
-            <url>http://download.java.net/maven/1</url>
-            <layout>legacy</layout>
-        </pluginRepository>
+        <!--<pluginRepository>-->
+            <!--<id>java.net</id>-->
+            <!--<url>http://download.java.net/maven/1</url>-->
+            <!--<layout>legacy</layout>-->
+        <!--</pluginRepository>-->
     </pluginRepositories>
 </project>
