--- a/symba-obiloader/pom.xml
+++ b/symba-obiloader/pom.xml
@@ -30,11 +30,13 @@
             <!--<artifactId>factplusplus</artifactId>-->
             <!--<version>1.1.11</version>-->
         <!--</dependency>-->
+        <!-- mvn deploy:deploy-file -DrepositoryId=carmen -DgroupId=org.mindswap -DartifactId=pellet-core -Dversion=2.0.0-rc5 -Dpackaging=jar -Dfile=/home/allyson/Apps/pellet-2.0.0-rc5/lib/pellet-core.jar -Durl=scp://carmen.ncl.ac.uk/var/www/maven/repo/-->
         <dependency>
             <groupId>org.mindswap</groupId>
-            <artifactId>pellet</artifactId>
-            <version>1.5.0</version>
+            <artifactId>pellet-owlapi</artifactId>
+            <version>2.0.0-rc5</version>
         </dependency>
+        <!--mvn deploy:deploy-file -DrepositoryId=carmen -DgroupId=aterm -DartifactId=aterm -Dversion=1.6 -Dpackaging=jar -Dfile=/home/allyson/Apps/pellet-2.0.0-rc5/lib/aterm-java-1.6.jar -Durl=scp://carmen.ncl.ac.uk/var/www/maven/repo/-->
         <dependency>
             <groupId>aterm</groupId>
             <artifactId>aterm</artifactId>
