--- a/symba-webapp/pom.xml
+++ b/symba-webapp/pom.xml
@@ -75,16 +75,16 @@
             <!--<version>1.4</version>-->
         <!--</dependency>-->
         <dependency>
-            <groupId>ch.ethz.ssh2</groupId>
-            <artifactId>ganymed-ssh2</artifactId>
-            <version>build210</version>
+            <groupId>com.trilead</groupId>
+            <artifactId>ssh2</artifactId>
+            <version>build213</version>
             <!--<scope>compile</scope>
             <systemPath>${basedir}/../dpi/src/main/lib/ganymed-ssh2-build210.jar</systemPath>-->
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>3.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
