--- a/pom.xml
+++ b/pom.xml
@@ -480,15 +480,17 @@
 
                 <!-- An optional status message to be displayed on the login screen only -->
                 <net.sourceforge.symba.webapp.status>
-                    12 September 2008. We are nearly complete with the upgrade to FuGE Version 1. Please \
+                    April 2009. We are finished with the upgrade to FuGE Version 1. Please \
                     be aware that some parts of the system may not be operating fully. Specifically, the ability to \
                     copy metadata from a particular protocol run directly into a new loading of a protocol has \
                     been temporarily disabled. However, we thought it best to  \
                     allow you to play with the most up-to-date version of the software in the meantime. \
-                    If you wish to have your own login to the sandbox, please contact us. Otherwise, you may access \
-                    with the general login "Anonymous" with pass "AnonymousPass". Please let us know if it seems anyone is \
-                    misusing this login and we can reset the database.
+                    PLEASE NOTE THAT THIS SYSTEM WORKS BEST IN FIREFOX. INTERNET EXPLORER CURRENTLY DOES NOT \
+                    PRINT OUT ALL OF THE TEXT CORRECTLY ON THESE PAGES. WE ARE WORKING ON THIS PROBLEM.
                 </net.sourceforge.symba.webapp.status>
+                <!-- If you wish to have your own login to the sandbox, please contact us. Otherwise, you may access \
+                    with the general login "Anonymous" with pass "AnonymousPass". Please let us know if it seems anyone is \
+                    misusing this login and we can reset the database. -->
 
                 <!-- The name and verison of this software: there are already reasonable defaults, so you don't need to
                 change this unless you want to -->
@@ -797,22 +799,22 @@
             <name>Java.net Maven 2 Repository</name>
             <url>http://download.java.net/maven/2</url>
         </repository>
-        <repository>
-            <id>maven-repository.dev.java.net</id>
-            <name>Java.net Maven 1 Repository (legacy)</name>
-            <url>http://download.java.net/maven/1</url>
-            <layout>legacy</layout>
-        </repository>
+        <!--<repository>-->
+            <!--<id>maven-repository.dev.java.net</id>-->
+            <!--<name>Java.net Maven 1 Repository (legacy)</name>-->
+            <!--<url>http://download.java.net/maven/1</url>-->
+            <!--<layout>legacy</layout>-->
+        <!--</repository>-->
         <!--<repository>
          <id>carmen-snapshot</id>
          <name>Carmen snapshot repository</name>
          <url>http://carmen.ncl.ac.uk/maven/repo-snapshot</url>
-       </repository>
+       </repository>-->
        <repository>
          <id>carmen</id>
          <name>Carmen release repository</name>
          <url>http://carmen.ncl.ac.uk/maven/repo</url>
-       </repository> -->
+       </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -825,12 +827,12 @@
             <name>Java.net Maven 2 Repository</name>
             <url>http://download.java.net/maven/2</url>
         </pluginRepository>
-        <pluginRepository>
-            <id>maven-repository.dev.java.net</id>
-            <name>Java.net Maven 1 Repository (legacy)</name>
-            <url>http://download.java.net/maven/1</url>
-            <layout>legacy</layout>
-        </pluginRepository>
+        <!--<pluginRepository>-->
+            <!--<id>maven-repository.dev.java.net</id>-->
+            <!--<name>Java.net Maven 1 Repository (legacy)</name>-->
+            <!--<url>http://download.java.net/maven/1</url>-->
+            <!--<layout>legacy</layout>-->
+        <!--</pluginRepository>-->
     </pluginRepositories>
     <prerequisites>
         <maven>2.0.1</maven>
