--- a/symba-webapp/pom.xml
+++ b/symba-webapp/pom.xml
@@ -13,66 +13,75 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>net.sourceforge.symba</groupId>
-        <artifactId>symba</artifactId>
-        <version>8.09</version>
-    </parent>
+    <!--<parent>-->
+    <!--<groupId>net.sourceforge.symba</groupId>-->
+    <!--<artifactId>symba</artifactId>-->
+    <!--<version>8.09</version>-->
+    <!--</parent>-->
+    <groupId>net.sourceforge.symba</groupId>
     <artifactId>symba-webapp</artifactId>
+    <version>8.09</version>
     <packaging>war</packaging>
-    <name>SyMBA Web Interface</name>
+    <name>SyMBA Web Interface</name>        
+
+    <properties>
+        <gwt.version>2.0.2</gwt.version>
+        <gwt.module.name>net.sourceforge.symba.web.InvestigationManipulator</gwt.module.name>
+    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>${pom.groupId}</groupId>
-            <artifactId>symba-webapp-helper</artifactId>
-            <version>${pom.version}</version>
-        </dependency>
-        <!--<dependency>
-            <groupId>uk.org.carmen.security</groupId>
-            <artifactId>security-client</artifactId>
-            <version>1.0</version>
-        </dependency>-->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.2</version>
+            <groupId>net.sourceforge.symba</groupId>
+            <artifactId>symba-db</artifactId>
+            <version>8.09</version>
         </dependency>
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-        </dependency>
+              <groupId>org.swfupload</groupId>
+              <artifactId>swfupload-gwt</artifactId>
+              <version>1.1-SNAPSHOT</version>
+              <scope>provided</scope>
+            </dependency>
         <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-jelly</groupId>
-            <artifactId>commons-jelly-tags-interaction</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-discovery</groupId>
-            <artifactId>commons-discovery</artifactId>
-            <version>0.4</version>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.2.1</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.apache.axis</groupId>-->
-            <!--<artifactId>axis</artifactId>-->
-            <!--<version>1.4</version>-->
+        <!--<groupId>commons-logging</groupId>-->
+        <!--<artifactId>commons-logging</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>commons-beanutils</groupId>-->
+        <!--<artifactId>commons-beanutils</artifactId>-->
+        <!--<version>1.7.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>commons-lang</groupId>-->
+        <!--<artifactId>commons-lang</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>commons-jelly</groupId>-->
+        <!--<artifactId>commons-jelly-tags-interaction</artifactId>-->
+        <!--<version>1.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>commons-io</groupId>-->
+        <!--<artifactId>commons-io</artifactId>-->
+        <!--<version>1.3</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>commons-collections</groupId>-->
+        <!--<artifactId>commons-collections</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>commons-discovery</groupId>-->
+        <!--<artifactId>commons-discovery</artifactId>-->
+        <!--<version>0.4</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.apache.axis</groupId>-->
+        <!--<artifactId>axis</artifactId>-->
+        <!--<version>1.4</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>com.trilead</groupId>
@@ -81,30 +90,82 @@
             <!--<scope>compile</scope>
             <systemPath>${basedir}/../dpi/src/main/lib/ganymed-ssh2-build210.jar</systemPath>-->
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>taglibs</groupId>
-            <artifactId>standard</artifactId>
-            <version>1.1.2</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>junit</groupId>-->
+        <!--<artifactId>junit</artifactId>-->
+        <!--<version>3.8.2</version>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>javax.servlet</groupId>-->
+        <!--<artifactId>jstl</artifactId>-->
+        <!--<version>1.1.2</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>taglibs</groupId>-->
+        <!--<artifactId>standard</artifactId>-->
+        <!--<version>1.1.2</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>8.2-504.jdbc3</version>
+            <version>8.4-701.jdbc4</version>
             <!--<version>8.1-407.jdbc3</version>-->
         </dependency>
+
+        <!--  GWT deps (from central repo) -->
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-servlet</artifactId>
+            <version>${gwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-user</artifactId>
+            <version>${gwt.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>symba</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <version>1.2</version>
+                <configuration>
+                    <module>${gwt.module.name}</module>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <!--<goal>generateAsync</goal>-->
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--  tell the compiler we can use 1.5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
+    <repositories>
+        <repository>
+              <id>swfupload-gwt-snapshots</id>
+              <name>SWFUpload-GWT snapshot releases</name>
+              <url>http://swfupload-gwt.googlecode.com/svn/maven/snapshots</url>
+              <snapshots>
+                <enabled>true</enabled>
+              </snapshots>
+            </repository>
+    </repositories>
 </project>
